fixed hamburger on small devices and reduced redundant code

--- a/css/header.css
+++ b/css/header.css
@@ -31,23 +31,6 @@ nav a:hover{
 	 margin: auto;
  }
 
-@media(max-width: 390px){
-	#logo{
-		width: 40%;
-	}
-	
-	.navMobDropdown #hamburger{
-		width: 10%;
-        top: -40px;
-    }
-	
-	.navMobDropdown .mobDropdown-content{
-		width: 100px;
-		font-size: 1em;
-		margin: 15% 0 0 0;
-	}
-} 
-
 
  nav{
      display: none;
@@ -56,7 +39,7 @@ nav a:hover{
  #hamburger{
 	 position: absolute;
 	 width: 35px;
-	 padding: 45px 10% 40px 5%;
+	 padding: 40px 10% 40px 5%;
  }
 
  .navMobDropdown{
