--- a/css/mobileScreen.css
+++ b/css/mobileScreen.css
@@ -1,13 +1,14 @@
 /*for very very small devices*/
-@media screen and (max-width: 390px) {
+@media screen and (max-width:450px) {
 		/*--------mobile header--------*/
     #logo {
         width: 40%;
     }
 
     .navMobDropdown #hamburger {
-        width: 10%;
-        margin: 4% 0 2%;
+       padding-top: 5%;
+        width: 7%;
+        
     }
 
     .navMobDropdown .mobDropdown-content {
